@@ -4,7 +4,6 @@
 #include "Mutils.h"
 #include "dgCMatrix.h"
 
-SEXP dtCMatrix_validate(SEXP x);
 SEXP Parent_inverse(SEXP par, SEXP unitdiag);
 int parent_inv_ap(int n, int countDiag, const int pr[], int ap[]);
 void parent_inv_ai(int n, int countDiag, const int pr[], int ai[]);
